; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Logging.c_SetEraserCheckInterval.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Logging.c_SetEraserCheckInterval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DISK_FREE_CHECK_INTERVAL_DEFAULT = common dso_local global i32 0, align 4
@eraser_check_interval = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SetEraserCheckInterval(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp eq i32 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = load i32, i32* @DISK_FREE_CHECK_INTERVAL_DEFAULT, align 4
  store i32 %6, i32* @eraser_check_interval, align 4
  br label %10

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = mul nsw i32 %8, 1000
  store i32 %9, i32* @eraser_check_interval, align 4
  br label %10

10:                                               ; preds = %7, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
